--- a/blackjack.ipynb
+++ b/blackjack.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7, 3]\n",
-      "[8, 'Q']\n",
-      "The dealer has 7 and X\n",
-      "Player has [8, 'Q'] for a total of 18\n",
-      "The dealer has (7, 3) and X\n",
-      "Player has [8, 'Q'] for a total of 18\n",
+      "The dealer is showing J\n",
+      "Player has ['J', 3] for a total of 13\n",
+      "The dealer is showing J\n",
+      "Dealer has ['J', 6] for a total of 16\n",
+      "The dealer is showing ('J', 6)\n",
+      "Dealer has ['J', 6, 'Q'] for a total of 26\n",
       "\n",
-      "Player has [8, 'Q'] - for a total of 18 Dealer has [7, 3, 9] for a total of 19\n",
-      "Dealer wins!\n"
+      "Player has ['J', 3] - for a total of 13 Dealer has ['J', 6, 'Q'] for a total of 26\n",
+      "Dealer busts. Player wins!\n"
      ]
     }
    ],
@@ -64,45 +64,49 @@
     "    dealCard(dealerHand)\n",
     "    dealCard(playerHand)\n",
     "\n",
-    "print(dealerHand)\n",
-    "print(playerHand)\n",
-    "    \n",
-    "while playerIn or dealerIn:\n",
-    "    print(f\"The dealer has {revealDealerHand()} and X\")\n",
-    "    print(f\"Player has {playerHand} for a total of {total(playerHand)}\")\n",
-    "    if playerIn:\n",
-    "        stayOrHit = input(\"1: Stay\\n2: Hit\\n\")\n",
-    "    if total(dealerHand) > 16:\n",
-    "        dealerIn = False\n",
+    "if total(playerHand) == 21 or total(dealerHand) == 21:\n",
+    "    print(\"Blackjack! Game ends.\")\n",
+    "    if total(playerHand) == 21:\n",
+    "        print(\"Player wins!\")\n",
     "    else:\n",
-    "        dealCard(dealerHand)\n",
+    "        print(\"Dealer wins!\")\n",
+    "    exit()\n",
+    "    \n",
+    "while playerIn:\n",
+    "    print(f\"The dealer is showing {revealDealerHand()}\")\n",
+    "    print(f\"Player has {playerHand} for a total of {total(playerHand)}\")\n",
+    "    stayOrHit = input(\"1: Stay\\n2: Hit\\n\")\n",
     "    if stayOrHit == '1':\n",
     "        playerIn = False\n",
     "    else:\n",
     "        dealCard(playerHand)\n",
-    "    if total(playerHand) >= 21:\n",
-    "        break\n",
-    "    elif total(dealerHand) >= 21:\n",
-    "        break\n",
+    "        if total(playerHand) > 21:\n",
+    "            print(f\"\\nPlayer has {playerHand} - for a total of {total(playerHand)} Dealer has {dealerHand}\")\n",
+    "            print(\"Player busts. Dealer wins!\")\n",
+    "            exit()\n",
     "\n",
-    "if total(playerHand) == 21:\n",
-    "    print(f\"\\nPlayer has {playerHand} - BLACKJACK! Dealer has {dealerHand} for a total of {total(dealerHand)}\")\n",
-    "    print(\"Player wins!\")\n",
-    "elif total(dealerHand) == 21:\n",
-    "    print(f\"\\nPlayer has {playerHand} - for a total of {total(playerHand)} Dealer has {dealerHand} - BLACKJACK!\")\n",
-    "    print(\"Dealer wins!\")\n",
-    "elif total(playerHand) > 21:\n",
+    "if total(playerHand) > 21:\n",
     "    print(f\"\\nPlayer has {playerHand} - for a total of {total(playerHand)} Dealer has {dealerHand}\")\n",
     "    print(\"Player busts. Dealer wins!\")\n",
-    "elif total(dealerHand) > 21:\n",
+    "    exit()\n",
+    "\n",
+    "while dealerIn:\n",
+    "    print(f\"The dealer is showing {revealDealerHand()}\")\n",
+    "    print(f\"Dealer has {dealerHand} for a total of {total(dealerHand)}\")\n",
+    "    if total(dealerHand) >= 17:\n",
+    "        dealerIn = False\n",
+    "    else:\n",
+    "        dealCard(dealerHand)\n",
+    "\n",
+    "if total(dealerHand) > 21:\n",
     "    print(f\"\\nPlayer has {playerHand} - for a total of {total(playerHand)} Dealer has {dealerHand} for a total of {total(dealerHand)}\")\n",
     "    print(\"Dealer busts. Player wins!\")\n",
-    "elif 21 - total(dealerHand) < 21 - total(playerHand):\n",
+    "elif total(dealerHand) >= total(playerHand):\n",
     "    print(f\"\\nPlayer has {playerHand} - for a total of {total(playerHand)} Dealer has {dealerHand} for a total of {total(dealerHand)}\")\n",
     "    print(\"Dealer wins!\")\n",
-    "elif 21 - total(dealerHand) > 21 - total(playerHand):\n",
+    "else:\n",
     "    print(f\"\\nPlayer has {playerHand} - for a total of {total(playerHand)} Dealer has {dealerHand} for a total of {total(dealerHand)}\")\n",
-    "    print(\"Player wins!\")"
+    "    print(\"Player wins!\")\n"
    ]
   },
   {
@@ -129,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
